--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
     import { getFirestore, collection, addDoc, getDocs, query, orderBy, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyC78l9b2DTNj64y_0fbRKofNupO6NHDmeo",
@@ -89,7 +88,7 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-    const storage = getStorage(app);
+    const storageBucket = firebaseConfig.storageBucket;
 
     const loginForm = document.getElementById('loginForm');
     const uploadForm = document.getElementById('uploadForm');
@@ -256,7 +255,7 @@
       const category = document.getElementById('fldCat').value;
       const caption = document.getElementById('fldCaption').value;
       const file = document.getElementById('fldFile').files[0];
-      const embedUrl = document.getElementById('fldEmbed').value;
+      const embedUrl = document.getElementById('fldEmbed').value.trim();
       const selectedAlbum = albumSelect.value;
       const newAlbum = newAlbumInput.value.trim();
 
@@ -292,11 +291,12 @@
 
         let url = '';
         if (file) {
-          const path = `portfolio/${albumId}/${type}/${Date.now()}-${file.name}`;
-          const sref = ref(storage, path);
-          await uploadBytes(sref, file);
-          url = await getDownloadURL(sref);
+          const safeFileName = file.name.replace(/[^a-zA-Z0-9._-]+/g, '_');
+          const path = `portfolio/${albumId}/${type}/${Date.now()}-${safeFileName}`;
+          url = await uploadFileWithCorsSupport(path, file);
         }
+
+        const normalizedEmbedUrl = type === 'video' ? embedUrl : '';
 
         await addDoc(colRef, {
           title,
@@ -304,7 +304,7 @@
           category,
           caption,
           url,
-          embedUrl,
+          embedUrl: normalizedEmbedUrl,
           albumId,
           albumName,
           createdAt: serverTimestamp()
@@ -322,6 +322,62 @@
     document.getElementById('year').textContent = new Date().getFullYear();
 
     loadAlbums().then(loadPortfolio);
+
+    async function uploadFileWithCorsSupport(path, file) {
+      const currentUser = auth.currentUser;
+      if (!currentUser) {
+        throw new Error('Faça login novamente para enviar arquivos.');
+      }
+
+      if (!storageBucket) {
+        throw new Error('Bucket do Storage não está configurado.');
+      }
+
+      const token = await currentUser.getIdToken();
+      const uploadUrl = new URL(`https://firebasestorage.googleapis.com/upload/storage/v1/b/${storageBucket}/o`);
+      uploadUrl.searchParams.set('uploadType', 'multipart');
+      uploadUrl.searchParams.set('name', path);
+      uploadUrl.searchParams.set('access_token', token);
+
+      const metadata = new Blob([
+        JSON.stringify({
+          name: path,
+          contentType: file.type || 'application/octet-stream'
+        })
+      ], { type: 'application/json' });
+
+      const formData = new FormData();
+      formData.append('metadata', metadata);
+      formData.append('file', file);
+
+      const response = await fetch(uploadUrl, {
+        method: 'POST',
+        body: formData,
+        mode: 'cors'
+      });
+
+      if (!response.ok) {
+        const message = await extractErrorMessage(response);
+        throw new Error(message || 'Falha ao enviar arquivo para o Storage.');
+      }
+
+      const result = await response.json();
+      if (!result.name || !result.downloadTokens) {
+        throw new Error('Resposta inesperada do Storage.');
+      }
+
+      const objectPath = encodeURIComponent(result.name);
+      return `https://firebasestorage.googleapis.com/v0/b/${storageBucket}/o/${objectPath}?alt=media&token=${result.downloadTokens}`;
+    }
+
+    async function extractErrorMessage(response) {
+      try {
+        const data = await response.json();
+        return data?.error?.message;
+      } catch (error) {
+        return null;
+      }
+    }
   </script>
 </body>
 </html>
