--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       apiKey: "AIzaSyC78l9b2DTNj64y_0fbRKofNupO6NHDmeo",
       authDomain: "matheus-35023.firebaseapp.com",
       projectId: "matheus-35023",
-  storageBucket: "matheus-35023.firebasestorage.app",
+      storageBucket: "matheus-35023.appspot.com",
       messagingSenderId: "1011113149395",
       appId: "1:1011113149395:web:c1f449e0e974ca8ecb2526"
     };
@@ -90,7 +90,9 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
     const storageBucket = firebaseConfig.storageBucket;
-    const storage = getStorage(app);
+    const storage = storageBucket
+      ? getStorage(app, `gs://${storageBucket}`)
+      : getStorage(app);
 
     const loginForm = document.getElementById('loginForm');
     const uploadForm = document.getElementById('uploadForm');
