--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signInAnonymously } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
     import { getFirestore, collection, addDoc, getDocs, query, orderBy, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-storage.js";
+    import { getStorage, ref, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyC78l9b2DTNj64y_0fbRKofNupO6NHDmeo",
@@ -293,11 +293,12 @@
           albumSelect.value = albumId;
         }
 
+        const userForUpload = await ensureAuthenticatedUser();
+        const ownerUid = userForUpload.uid;
+
         let url = '';
         if (file) {
-          const safeFileName = file.name.replace(/[^a-zA-Z0-9._-]+/g, '_');
-          const path = `portfolio/${albumId}/${type}/${Date.now()}-${safeFileName}`;
-          url = await uploadFileWithCorsSupport(path, file);
+          url = await uploadFileWithCorsSupport(type, file, ownerUid);
         }
 
         const normalizedEmbedUrl = type === 'video' ? embedUrl : '';
@@ -311,7 +312,8 @@
           embedUrl: normalizedEmbedUrl,
           albumId,
           albumName,
-          createdAt: serverTimestamp()
+          createdAt: serverTimestamp(),
+          ownerUid
         });
 
         uploadStatus.textContent = 'Item salvo com sucesso!';
@@ -327,26 +329,52 @@
 
     loadAlbums().then(loadPortfolio);
 
-    async function uploadFileWithCorsSupport(path, file) {
-      const currentUser = auth.currentUser;
-      if (!currentUser) {
-        throw new Error('Faça login novamente para enviar arquivos.');
+    async function ensureAuthenticatedUser() {
+      if (auth.currentUser) {
+        return auth.currentUser;
       }
 
+      await signInAnonymously(auth);
+      if (!auth.currentUser) {
+        throw new Error('Não foi possível autenticar para envio.');
+      }
+      return auth.currentUser;
+    }
+
+    async function uploadFileWithCorsSupport(type, file, uid) {
       if (!storageBucket) {
         throw new Error('Bucket do Storage não está configurado.');
       }
 
+      const sanitizedName = file.name.replace(/\s+/g, '_').replace(/[^a-zA-Z0-9._-]+/g, '_');
+      const timestampedName = `${Date.now()}-${sanitizedName}`;
+      const folder = type === 'video' ? 'video' : 'image';
+      const fileRef = ref(storage, `portfolio/${uid}/${folder}/${timestampedName}`);
+
       const metadata = {
-        contentType: file.type || 'application/octet-stream',
-        customMetadata: {
-          uploader: currentUser.uid
-        }
+        contentType: file.type || (type === 'video' ? 'video/mp4' : 'image/png')
       };
 
-      const fileRef = ref(storage, path);
-      await uploadBytes(fileRef, file, metadata);
-      return await getDownloadURL(fileRef);
+      return await new Promise((resolve, reject) => {
+        const task = uploadBytesResumable(fileRef, file, metadata);
+        task.on('state_changed',
+          (snap) => {
+            const progress = (snap.bytesTransferred / snap.totalBytes) * 100;
+            uploadStatus.textContent = `Enviando... ${progress.toFixed(0)}%`;
+          },
+          (err) => {
+            reject(err);
+          },
+          async () => {
+            try {
+              const downloadURL = await getDownloadURL(task.snapshot.ref);
+              resolve(downloadURL);
+            } catch (error) {
+              reject(error);
+            }
+          }
+        );
+      });
     }
   </script>
 </body>
